syntax = "proto3";
package cosmos.quarantine.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/quarantine";

// QuarantineRecord defines structure that represents coins that have been quarantined.
message QuarantinedFunds {
  // to_address is the intended recipient of the coins that have been quarantined.
  string to_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // from_address is the sender of the coins.
  string from_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // coins is the amount currently in quarantined for the two addresses.
  repeated cosmos.base.v1beta1.Coin coins = 3
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  // declined is true if these funds were previously declined.
  bool declined = 4;
}

// QuarantineAutoResponseEntry defines the auto response to one address from another.
message QuarantineAutoResponseEntry {
  // to_address is the receiving address.
  string to_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // from_address is the sending address.
  string from_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // response is the auto-response setting for these two addresses.
  QuarantineAutoResponse response = 3;
}

// QuarantineAutoResponseUpdate defines a quarantine auto response update that should be applied.
message QuarantineAutoResponseUpdate {
  // from_address is the address that funds would be coming from.
  string from_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // response is the automatic action to take on funds sent from from_address, or in the
  // case of QUARANTINE_AUTO_RESPONSE_UNSPECIFIED, that no automatic action should be taken.
  QuarantineAutoResponse response = 2;
}

// QuarantineAutoResponse enumerates the quarantine auto-response options.
enum QuarantineAutoResponse {
  option (gogoproto.goproto_enum_prefix) = false;

  // QUARANTINE_UNSPECIFIED defines that no automatic action should be taken.
  QUARANTINE_AUTO_RESPONSE_UNSPECIFIED = 0;
  // QUARANTINE_AUTO_ACCEPT defines that sends should be automatically accepted.
  QUARANTINE_AUTO_RESPONSE_ACCEPT = 1;
  // QUARANTINE_AUTO_DECLINE defines that sends should be automatically declined.
  QUARANTINE_AUTO_RESPONSE_DECLINE = 2;
}

// QuarantineRecord defines information regarding quarantined funds.
message QuarantineRecord {
  // coins is the amount that has been quarantined.
  repeated cosmos.base.v1beta1.Coin coins = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  // declined is whether these funds have been declined.
  bool declined = 2;
}